MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/DMS_Link__c.field-meta.xml
<CustomField>
    <fullName>DMS_Link__c</fullName>
    <description>Stores sharepoint link</description>
    <label>DMS link 1</label>
    <type>TextArea</type>
</CustomField>