MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/DMS_Link_RT__c.field-meta.xml
<CustomField>
    <fullName>DMS_Link_RT__c</fullName>
    <label>DMS link</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>