MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Hubspot_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Company_Name__c</fullName>
    <label>Hubspot Company Name</label>
    <type>TextArea</type>
</CustomField>