MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Hubspot_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores user lookup who created deal in hubspot</description>
    <label>Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>