MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Hubspot_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_Id__c</fullName>
    <label>Hubspot Deal Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>