MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Hubspot_Deal_Link__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_Link__c</fullName>
    <label>Hubspot Deal Link</label>
    <type>Url</type>
</CustomField>