MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Hubspot_Deal_size__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_size__c</fullName>
    <label>Hubspot Deal size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>