MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Hubspot_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_Type__c</fullName>
    <label>Hubspot Deal Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>