MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Related_CQ_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_CQ_Record__c</fullName>
    <label>Related CQ Record</label>
    <type>Url</type>
</CustomField>