MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Related_RFI_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_RFI_Record__c</fullName>
    <label>Related RFI Record</label>
    <type>Url</type>
</CustomField>