MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Related_SQ_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_SQ_Record__c</fullName>
    <label>Related SQ Record</label>
    <type>Url</type>
</CustomField>