MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Sharepoint_Link__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Link__c</fullName>
    <description>Stores sharepoint link</description>
    <label>Sharepoint Link</label>
    <type>TextArea</type>
</CustomField>