MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Sharepoint_Link_RT__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Link_RT__c</fullName>
    <label>Sharepoint Link</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>