MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Win_Information__c.field-meta.xml
<CustomField>
    <fullName>Win_Information__c</fullName>
    <label>Win Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>