MobileExpense/force-app/main/default/objects/avnio__Project__c/fields/Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Reason__c</fullName>
    <label>Win Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Rules</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Cost Centers</fullName>
            </value>
            <value>
                <fullName>Credit Card Data Feed</fullName>
            </value>
            <value>
                <fullName>Credit Card PDF Matching</fullName>
            </value>
            <value>
                <fullName>Custom Fields</fullName>
            </value>
            <value>
                <fullName>Custom Workflows</fullName>
            </value>
            <value>
                <fullName>Daily Allowances</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>OCR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overall solution</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Spend catcher</fullName>
            </value>
            <value>
                <fullName>Spend controller</fullName>
            </value>
            <value>
                <fullName>UI/UX</fullName>
            </value>
            <value>
                <fullName>User friendliness</fullName>
            </value>
            <value>
                <fullName>White Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>