MobileExpense/force-app/main/default/objects/avnio__Project__c/recordTypes/CQ.recordType-meta.xml
<RecordType>
    <fullName>CQ</fullName>
    <active>true</active>
    <description>Compliance Questionnaire</description>
    <label>CQ</label>
</RecordType>